--- a/package.json
+++ b/package.json
@@ -8,11 +8,17 @@
   ],
   "main": "src/index.js",
   "dependencies": {
+    "@fortawesome/fontawesome": "1.1.8",
+    "@fortawesome/fontawesome-svg-core": "1.2.28",
+    "@fortawesome/free-brands-svg-icons": "5.13.0",
+    "@fortawesome/free-solid-svg-icons": "5.13.0",
+    "@fortawesome/react-fontawesome": "0.1.9",
     "bootstrap": "4.4.1",
     "react": "16.12.0",
     "react-bootstrap": "1.0.0",
     "react-dom": "16.12.0",
     "react-fontawesome": "1.7.1",
+    "react-responsive-carousel": "3.1.51",
     "react-scripts": "3.0.1",
     "video-react": "0.14.1"
   },
