--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@fortawesome/free-solid-svg-icons": "5.13.0",
     "@fortawesome/react-fontawesome": "0.1.9",
     "bootstrap": "4.4.1",
+    "infinite-react-carousel": "1.2.11",
+    "jquery": "3.4.1",
     "react": "16.12.0",
     "react-bootstrap": "1.0.0",
     "react-dom": "16.12.0",
