--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
     "infinite-react-carousel": "1.2.11",
     "jquery": "3.4.1",
     "react": "16.12.0",
+    "react-awesome-slider": "4.1.0",
     "react-bootstrap": "1.0.0",
+    "react-bootstrap-carousel": "4.0.3",
+    "react-bootstrap-navbar": "1.1.0",
     "react-dom": "16.12.0",
     "react-fontawesome": "1.7.1",
+    "react-items-carousel": "2.8.0",
     "react-responsive-carousel": "3.1.51",
     "react-scripts": "3.0.1",
     "video-react": "0.14.1"
